force-app/main/default/objects/Benchmarking_Submission__c/Benchmarking_Submission__c.object-meta.xml
<CustomObject>
    <label>Benchmarking Submission</label>
    <pluralLabel>Benchmarking Submissions</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Submission Number</label>
        <displayFormat>SUB-{0000}</displayFormat>
    </nameField>
    <description>Stores benchmarking data submissions from firms</description>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject> 