force-app/main/default/objects/Benchmarking_Submission__c/fields/Advisor_Compensation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Compensation_Percentage__c</fullName>
    <description>Advisor compensation as a percentage of total revenue - automatically calculated</description>
    <formula>IF(Total_Revenue__c > 0, (Total_Advisor_Compensation__c / Total_Revenue__c) * 100, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advisor Compensation Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>