force-app/main/default/objects/Benchmarking_Submission__c/fields/Advisor_Growth_Rate__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Growth_Rate__c</fullName>
    <description>Percentage growth in number of advisors - automatically calculated</description>
    <formula>IF(Number_of_Advisors__c > 0 &amp;&amp; Number_of_Advisors__c - Number_of_New_Advisors__c > 0, (Number_of_New_Advisors__c / (Number_of_Advisors__c - Number_of_New_Advisors__c)) * 100, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advisor Growth Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>