force-app/main/default/objects/Benchmarking_Submission__c/fields/Advisor_Turnover_Rate__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Turnover_Rate__c</fullName>
    <description>Annual advisor turnover rate</description>
    <label>Advisor Turnover Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField> 