force-app/main/default/objects/Benchmarking_Submission__c/fields/AUM__c.field-meta.xml
<CustomField>
    <fullName>AUM__c</fullName>
    <description>Assets Under Management</description>
    <label>AUM</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 