force-app/main/default/objects/Benchmarking_Submission__c/fields/AUM_Growth_Rate__c.field-meta.xml
<CustomField>
    <fullName>AUM_Growth_Rate__c</fullName>
    <description>Year-over-year AUM growth rate</description>
    <formula>IF( AUM_PreviousYear__c > 0, ((AUM__c - AUM_PreviousYear__c) / AUM_PreviousYear__c) * 100, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AUM Growth Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>