force-app/main/default/objects/Benchmarking_Submission__c/fields/AUM_per_Advisor__c.field-meta.xml
<CustomField>
    <fullName>AUM_per_Advisor__c</fullName>
    <description>Assets Under Management per advisor</description>
    <formula>AUM__c / Number_of_Advisors__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AUM per Advisor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>