force-app/main/default/objects/Benchmarking_Submission__c/fields/AUM_PreviousYear__c.field-meta.xml
<CustomField>
    <fullName>AUM_PreviousYear__c</fullName>
    <description>Assets Under Management for the previous year</description>
    <label>AUM (Previous Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 