force-app/main/default/objects/Benchmarking_Submission__c/fields/Average_Advisor_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Average_Advisor_Tenure__c</fullName>
    <description>Average number of years advisors have been with the firm</description>
    <label>Average Advisor Tenure</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField> 