force-app/main/default/objects/Benchmarking_Submission__c/fields/Average_Client_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Average_Client_Tenure__c</fullName>
    <description>Average number of years clients have been with the firm</description>
    <label>Average Client Tenure</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>