force-app/main/default/objects/Benchmarking_Submission__c/fields/Average_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Average_Response_Time__c</fullName>
    <description>Average response time in hours</description>
    <label>Average Response Time (Hours)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField> 