force-app/main/default/objects/Benchmarking_Submission__c/fields/Benchmarking_Firm__c.field-meta.xml
<CustomField>
    <fullName>Benchmarking_Firm__c</fullName>
    <description>Master-detail relationship to the Benchmarking Firm</description>
    <label>Benchmarking Firm</label>
    <referenceTo>Benchmarking_Firm__c</referenceTo>
    <relationshipLabel>Benchmarking Submissions</relationshipLabel>
    <relationshipName>Benchmarking_Submissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>