force-app/main/default/objects/Benchmarking_Submission__c/fields/Client_Acquisition_Cost__c.field-meta.xml
<CustomField>
    <fullName>Client_Acquisition_Cost__c</fullName>
    <description>Average cost to acquire a new client - automatically calculated</description>
    <formula>IF(Number_of_New_Clients__c > 0, Marketing_Sales_Expenses__c / Number_of_New_Clients__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Acquisition Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>