force-app/main/default/objects/Benchmarking_Submission__c/fields/Client_Complaint_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Client_Complaint_Ratio__c</fullName>
    <description>Number of complaints per 100 clients - automatically calculated</description>
    <formula>IF(Number_of_Clients__c > 0, (Number_of_Client_Complaints__c / Number_of_Clients__c) * 100, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Complaint Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>