force-app/main/default/objects/Benchmarking_Submission__c/fields/Client_Growth_Rate__c.field-meta.xml
<CustomField>
    <fullName>Client_Growth_Rate__c</fullName>
    <description>Year-over-year client growth rate</description>
    <formula>IF( Number_of_Clients_PreviousYear__c > 0, ((Number_of_Clients__c - Number_of_Clients_PreviousYear__c) / Number_of_Clients_PreviousYear__c) * 100, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Growth Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField> 