force-app/main/default/objects/Benchmarking_Submission__c/fields/Client_Onboarding_Time__c.field-meta.xml
<CustomField>
    <fullName>Client_Onboarding_Time__c</fullName>
    <description>Average number of days to onboard a new client</description>
    <label>Client Onboarding Time (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 