force-app/main/default/objects/Benchmarking_Submission__c/fields/Client_Retention_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Client_Retention_Revenue__c</fullName>
    <description>Revenue from existing clients who renewed their contracts</description>
    <label>Client Retention Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>