force-app/main/default/objects/Benchmarking_Submission__c/fields/Client_Retention_Revenue_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Client_Retention_Revenue_Percentage__c</fullName>
    <description>Percentage of total revenue from existing clients who renewed their contracts - automatically calculated</description>
    <formula>IF(Total_Revenue__c > 0, (Client_Retention_Revenue__c / Total_Revenue__c) * 100, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Retention Revenue Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>