force-app/main/default/objects/Benchmarking_Submission__c/fields/Client_Satisfaction_Score_CSAT__c.field-meta.xml
<CustomField>
    <fullName>Client_Satisfaction_Score_CSAT__c</fullName>
    <description>Client Satisfaction Score (CSAT) on a scale of 1-10</description>
    <label>Client Satisfaction Score (CSAT)</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
    <valueSet>
        <valueSetDefinition>
            <minValue>1</minValue>
            <maxValue>10</maxValue>
        </valueSetDefinition>
    </valueSet>
</CustomField> 