force-app/main/default/objects/Benchmarking_Submission__c/fields/Clients_per_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Clients_per_Advisor__c</fullName>
    <description>Number of clients per advisor</description>
    <formula>Number_of_Clients__c / Number_of_Advisors__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clients per Advisor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField> 