force-app/main/default/objects/Benchmarking_Submission__c/fields/Compensation_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Expenses__c</fullName>
    <description>Total compensation expenses for the submission year</description>
    <label>Compensation Expenses</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 