force-app/main/default/objects/Benchmarking_Submission__c/fields/Compensation_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Ratio__c</fullName>
    <description>Compensation Expenses divided by Total Revenue</description>
    <formula>Compensation_Expenses__c / Total_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compensation Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField> 