force-app/main/default/objects/Benchmarking_Submission__c/fields/Direct_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Direct_Expenses__c</fullName>
    <description>Direct expenses related to service delivery</description>
    <label>Direct Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>