force-app/main/default/objects/Benchmarking_Submission__c/fields/Direct_Expenses_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Direct_Expenses_Percentage__c</fullName>
    <description>Direct expenses as a percentage of total operating expenses - automatically calculated</description>
    <formula>IF(Total_Operating_Expenses__c > 0, (Direct_Expenses__c / Total_Operating_Expenses__c) * 100, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Expenses Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>