force-app/main/default/objects/Benchmarking_Submission__c/fields/Expense_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Expense_Ratio__c</fullName>
    <description>Total Operating Expenses divided by Total Revenue</description>
    <formula>Total_Operating_Expenses__c / Total_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>