force-app/main/default/objects/Benchmarking_Submission__c/fields/Gross_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_Margin__c</fullName>
    <description>Gross profit margin percentage</description>
    <label>Gross Profit Margin</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField> 