force-app/main/default/objects/Benchmarking_Submission__c/fields/Marketing_Sales_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Sales_Expenses__c</fullName>
    <description>Total marketing and sales expenses for the submission year</description>
    <label>Marketing &amp; Sales Expenses</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 