force-app/main/default/objects/Benchmarking_Submission__c/fields/Net_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit_Margin__c</fullName>
    <description>Net profit margin percentage</description>
    <label>Net Profit Margin</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField> 