force-app/main/default/objects/Benchmarking_Submission__c/fields/Net_Promoter_Score_NPS__c.field-meta.xml
<CustomField>
    <fullName>Net_Promoter_Score_NPS__c</fullName>
    <description>Net Promoter Score (NPS) from -100 to 100</description>
    <label>Net Promoter Score (NPS)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>