force-app/main/default/objects/Benchmarking_Submission__c/fields/Non_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Non_Recurring_Revenue__c</fullName>
    <description>Non-recurring revenue for the submission year</description>
    <label>Non-Recurring Revenue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>