force-app/main/default/objects/Benchmarking_Submission__c/fields/Number_of_Accounts_Opened__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Accounts_Opened__c</fullName>
    <description>The total number of new accounts opened during the reporting period.</description>
    <inlineHelpText>Enter the total number of new accounts opened during the reporting period. Include all account types such as individual, joint, trust, retirement, and corporate accounts.</inlineHelpText>
    <label>Number of Accounts Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 