force-app/main/default/objects/Benchmarking_Submission__c/fields/Number_of_Advisors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Advisors__c</fullName>
    <description>Total number of advisors</description>
    <label>Number of Advisors</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>