force-app/main/default/objects/Benchmarking_Submission__c/fields/Number_of_Advisors_Left__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Advisors_Left__c</fullName>
    <description>Number of advisors who left the firm during the reporting period</description>
    <label>Number of Advisors Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>