force-app/main/default/objects/Benchmarking_Submission__c/fields/Number_of_Client_Complaints__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Client_Complaints__c</fullName>
    <description>Number of formal client complaints received</description>
    <label>Number of Client Complaints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>