force-app/main/default/objects/Benchmarking_Submission__c/fields/Number_of_Client_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Client_Referrals__c</fullName>
    <description>Number of new clients acquired through referrals</description>
    <label>Number of Client Referrals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>