force-app/main/default/objects/Benchmarking_Submission__c/fields/Number_of_Clients_PreviousYear__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Clients_PreviousYear__c</fullName>
    <description>Total number of clients for the previous year</description>
    <label>Number of Clients (Previous Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>