force-app/main/default/objects/Benchmarking_Submission__c/fields/Number_of_Compliance_Violations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Compliance_Violations__c</fullName>
    <description>Number of compliance violations in the submission year</description>
    <label>Number of Compliance Violations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>