force-app/main/default/objects/Benchmarking_Submission__c/fields/Number_of_New_Advisors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_New_Advisors__c</fullName>
    <description>Number of new advisors hired during the period</description>
    <label>Number of New Advisors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>