force-app/main/default/objects/Benchmarking_Submission__c/fields/Number_of_New_Clients__c.field-meta.xml
<CustomField>
    <fullName>Number_of_New_Clients__c</fullName>
    <description>Number of new clients acquired during the reporting period</description>
    <label>Number of New Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>