force-app/main/default/objects/Benchmarking_Submission__c/fields/Number_of_Resolved_Service_Requests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Resolved_Service_Requests__c</fullName>
    <description>Number of service requests resolved</description>
    <label>Number of Resolved Service Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>