force-app/main/default/objects/Benchmarking_Submission__c/fields/Number_of_Service_Requests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Service_Requests__c</fullName>
    <description>Total number of service requests received</description>
    <label>Number of Service Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>