force-app/main/default/objects/Benchmarking_Submission__c/fields/Number_of_Service_Requests_Handled__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Service_Requests_Handled__c</fullName>
    <description>The total number of client service requests handled during the reporting period.</description>
    <inlineHelpText>Enter the total number of client service requests handled during the reporting period. Include all channels such as phone, email, chat, and in-person interactions.</inlineHelpText>
    <label>Number of Service Requests Handled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 