force-app/main/default/objects/Benchmarking_Submission__c/fields/Number_of_Support_Staff__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Support_Staff__c</fullName>
    <description>Total number of support staff</description>
    <label>Number of Support Staff</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 