force-app/main/default/objects/Benchmarking_Submission__c/fields/Number_of_Transactions_Processed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Transactions_Processed__c</fullName>
    <description>The total number of financial transactions processed during the reporting period.</description>
    <inlineHelpText>Enter the total number of financial transactions processed by your firm during the reporting period. Include all trade executions, fund transfers, deposits, withdrawals, and other financial transactions.</inlineHelpText>
    <label>Number of Transactions Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 