force-app/main/default/objects/Benchmarking_Submission__c/fields/Occupancy_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Expenses__c</fullName>
    <description>Total occupancy expenses for the submission year</description>
    <label>Occupancy Expenses</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>