force-app/main/default/objects/Benchmarking_Submission__c/fields/Other_Operating_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Other_Operating_Expenses__c</fullName>
    <description>Other operating expenses not categorized elsewhere</description>
    <label>Other Operating Expenses</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 