force-app/main/default/objects/Benchmarking_Submission__c/fields/Profit_Per_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Profit_Per_Advisor__c</fullName>
    <description>Total profit per advisor</description>
    <formula>(Total_Revenue__c * Net_Profit_Margin__c) / Number_of_Advisors__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Per Advisor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>