force-app/main/default/objects/Benchmarking_Submission__c/fields/Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Revenue__c</fullName>
    <description>Recurring revenue for the submission year</description>
    <label>Recurring Revenue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 