force-app/main/default/objects/Benchmarking_Submission__c/fields/Referral_Acquisition_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Referral_Acquisition_Percentage__c</fullName>
    <description>Percentage of new clients acquired through referrals - automatically calculated</description>
    <formula>IF(Number_of_New_Clients__c > 0, (Number_of_Client_Referrals__c / Number_of_New_Clients__c) * 100, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Acquisition Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>