force-app/main/default/objects/Benchmarking_Submission__c/fields/Revenue_from_New_Clients__c.field-meta.xml
<CustomField>
    <fullName>Revenue_from_New_Clients__c</fullName>
    <description>Revenue generated from new clients in the submission year</description>
    <label>Revenue from New Clients</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>