force-app/main/default/objects/Benchmarking_Submission__c/fields/Revenue_Growth_Rate__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Growth_Rate__c</fullName>
    <description>Year-over-year revenue growth rate</description>
    <formula>IF( Revenue_Previous_Year__c > 0, ((Total_Revenue__c - Revenue_Previous_Year__c) / Revenue_Previous_Year__c) * 100, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Growth Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>