force-app/main/default/objects/Benchmarking_Submission__c/fields/Revenue_per_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Revenue_per_Advisor__c</fullName>
    <description>Total Revenue divided by Number of Advisors</description>
    <formula>Total_Revenue__c / Number_of_Advisors__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue per Advisor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>