force-app/main/default/objects/Benchmarking_Submission__c/fields/Revenue_per_Client__c.field-meta.xml
<CustomField>
    <fullName>Revenue_per_Client__c</fullName>
    <description>Average revenue per client</description>
    <label>Revenue per Client</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 