force-app/main/default/objects/Benchmarking_Submission__c/fields/Revenue_Previous_Year__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Previous_Year__c</fullName>
    <description>Total revenue for the previous year</description>
    <label>Revenue (Previous Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 