force-app/main/default/objects/Benchmarking_Submission__c/fields/Service_Request_Resolution_Rate__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Resolution_Rate__c</fullName>
    <description>Percentage of service requests that were resolved - automatically calculated</description>
    <formula>IF(Number_of_Service_Requests__c > 0, (Number_of_Resolved_Service_Requests__c / Number_of_Service_Requests__c) * 100, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Request Resolution Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>