force-app/main/default/objects/Benchmarking_Submission__c/fields/Submission_Year__c.field-meta.xml
<CustomField>
    <fullName>Submission_Year__c</fullName>
    <description>The year the data pertains to</description>
    <label>Submission Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 