force-app/main/default/objects/Benchmarking_Submission__c/fields/Support_Staff_per_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Support_Staff_per_Advisor__c</fullName>
    <description>Number of support staff per advisor</description>
    <formula>Number_of_Support_Staff__c / Number_of_Advisors__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Staff per Advisor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField> 