force-app/main/default/objects/Benchmarking_Submission__c/fields/Technology_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Technology_Expenses__c</fullName>
    <description>Total technology expenses for the submission year</description>
    <label>Technology Expenses</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>