force-app/main/default/objects/Benchmarking_Submission__c/fields/Total_Advisor_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Total_Advisor_Compensation__c</fullName>
    <description>Total compensation paid to advisors</description>
    <label>Total Advisor Compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>