force-app/main/default/objects/Benchmarking_Submission__c/fields/Total_Operating_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Operating_Expenses__c</fullName>
    <description>Total operating expenses for the submission year</description>
    <label>Total Operating Expenses</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 