force-app/main/default/objects/Benchmarking_Submission__c/validationRules/Restrict_Status_Changes.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Status_Changes</fullName>
    <active>true</active>
    <description>Prevents community users from setting submission status to 'Processed' or 'Error'</description>
    <errorConditionFormula>AND(
        ISCHANGED(Submission_Status__c),
        OR(
            ISPICKVAL(Submission_Status__c, "Processed"),
            ISPICKVAL(Submission_Status__c, "Error")
        ),
        $Profile.Name = "Benchmarking Participant Profile"
    )</errorConditionFormula>
    <errorDisplayField>Submission_Status__c</errorDisplayField>
    <errorMessage>You are not authorized to change the submission status to this value.</errorMessage>
</ValidationRule> 